--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,4 +17,6 @@
     <string name="hint_edit_text_product_price">Precio</string>
     <string name="content_description_delete_product">Eliminar producto</string>
     <string name="content_description_edit_product">Editar producto</string>
+    <string name="manual_transcription_product_quantity">Unidades: %1$d</string>
+    <string name="manual_transcription_product_price">Precio/unidad: %1$f %2$s</string>
 </resources>
