Generalized multiple choice activities and implemented on main activity

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -81,6 +81,7 @@
     <string name="empty_state_assignation_dialog">Todavía no has añadido ninguna persona, pulsa en \"%1$s\" para hacerlo</string>
     <string name="choosing_bar_choose_all">Todo</string>
     <string name="app_bar_button_assign">Asignar</string>
+    <string name="app_bar_button_delete">Eliminar</string>
 
 
     <plurals name="dialog_product_assignation_sub_header">
