Added clear all assignations button and changed some visuals (see desc.)
Added ripple effect on the main activity and assignations lists
Slightly modified the layout of the "select all" checkbox present on the action bar in choosing mode

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -82,6 +82,8 @@
     <string name="choosing_bar_choose_all">Todo</string>
     <string name="app_bar_button_assign">Asignar</string>
     <string name="app_bar_button_delete">Eliminar</string>
+    <string name="app_bar_button_clear_assignations">Quitar asignaciones</string>
+    <string name="dialog_clear_assignations_message">¿Estás seguro de que deseas quitar todas las asignaciones para los productos seleccionados?</string>
 
 
     <plurals name="dialog_product_assignation_sub_header">
