--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -50,18 +50,7 @@
     <string name="dialog_tip_hint">Introduce el porcentaje (%) de propina a continuación. Es posible cambiar el valor por defecto desde los ajustes</string>
     <string name="dialog_tip_result_text">Se añadirá un %1$d%% de propina (%2$s) a la cuenta.</string>
 
-    <string name="preference_category_title_settings">Ajustes</string>
-    <string name="preference_category_title_about">Acerca de</string>
-    <string name="preference_title_default_tip">Porcentaje de propina</string>
-    <string name="preference_title_remove_ads">Eliminar anuncios</string>
-    <string name="preference_summary_remove_ads">¡No más anuncios!</string>
-    <string name="preference_title_developer">Desarrollador</string>
-    <string name="preference_summary_developer" translatable="false">Samuel Soutullo Sobral</string>
-    <string name="preference_title_contact">Contacto</string>
-    <string name="preference_summary_contact" translatable="false">samuelsoutullosobral@gmail.com</string>
-    <string name="preference_title_version">Versión</string>
-    <string name="preference_title_privacy_policy">Política de privacidad</string>
-    <string name="preference_summary_privacy_policy">Revisar la política de privacidad</string>
+
     <string name="toast_manual_transcription_fill_fields">Por favor, rellene los campos correctamente</string>
     <string name="dialog_delete_product_title">Eliminar producto</string>
     <string name="dialog_delete_product_message">¿Estás seguro de que deseas eliminar el producto %1$s?</string>
@@ -95,6 +84,35 @@
     <string name="dialog_rename_bill_title">Renombrar cuenta</string>
     <string name="dialog_rename_bill_edit_text_hint">Nombre de la cuenta</string>
     <string name="on_all_bills_deleted_warning">Solo se han eliminado las cuentas cargadas. Puedes eliminar todas desde ajustes</string>
+
+    <string name="preference_category_title_settings">Ajustes</string>
+    <string name="preference_category_title_about">Acerca de</string>
+    <string name="preference_title_default_tip">Porcentaje de propina</string>
+    <string name="preference_summary_default_tip">Establecer el procentaje de propina por defecto</string>
+    <string name="preference_title_delete_bills">Eliminar todas las cuentas</string>
+    <string name="preference_summary_delete_bills">Se eliminarán todas las cuentas y personas introducidas</string>
+    <string name="preference_title_remove_ads">Eliminar anuncios</string>
+    <string name="preference_summary_remove_ads">¡No más publicidad!</string>
+    <string name="preference_title_developer">Desarrollador</string>
+    <string name="preference_summary_developer" translatable="false">Samuel Soutullo Sobral</string>
+    <string name="preference_title_contact">Contacto</string>
+    <string name="preference_title_version">Versión</string>
+    <string name="preference_title_privacy_policy">Política de privacidad</string>
+    <string name="preference_summary_privacy_policy">Revisar la política de privacidad</string>
+
+    <string name="preference_key_default_tip_percent" translatable="false">preference_default_tip_percent</string>
+    <string name="preference_key_delete_all_bills" translatable="false">preference_delete_all_bills</string>
+    <string name="preference_key_remove_ads" translatable="false">preference_remove_ads</string>
+    <string name="preference_key_developer" translatable="false">preference_developer</string>
+    <string name="preference_key_contact" translatable="false">preference_contact</string>
+    <string name="preference_key_version" translatable="false">preference_version</string>
+    <string name="preference_key_privacy_policy" translatable="false">preference_privacy_policy</string>
+
+    <string name="dialog_delete_all_bills_message">¿Estás seguro de que deseas eliminar todas las cuentas y personas introducidas en la aplicación?</string>
+    <string name="toast_delete_all_bills_success">Los datos han sido borrados correctamente</string>
+
+    <string name="developer_email" translatable="false">samuelsoutullosobral@gmail.com</string>
+    <string name="intent_chooser_title_send_mail">Enviar correo</string>
 
     <plurals name="dialog_product_assignation_sub_header">
         <item quantity="one">Asignar este producto a:</item>
