--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -113,6 +113,8 @@
 
     <string name="developer_email" translatable="false">samuelsoutullosobral@gmail.com</string>
     <string name="intent_chooser_title_send_mail">Enviar correo</string>
+    <string name="app_bar_search_hint">Buscar…</string>
+    <string name="bill_search_not_found">No se ha encontrado ningún resultado para la búsqueda actual</string>
 
     <plurals name="dialog_product_assignation_sub_header">
         <item quantity="one">Asignar este producto a:</item>
