--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -51,7 +51,7 @@
     <string name="dialog_edit_product_hint_product_quantity">Cantidad (máx. 50)</string>
     <string name="dialog_tip_hint">Introduce el porcentaje (%) de propina a continuación. Es posible cambiar el valor por defecto desde los ajustes</string>
     <string name="dialog_tip_result_text">Se añadirá un %1$d%% de propina (%2$s) a la cuenta.</string>
-
+    <string name="dialog_edit_tax_hint">Impuestos (%1$s)</string>
 
     <string name="toast_manual_transcription_fill_fields">Por favor, rellene los campos correctamente</string>
     <string name="dialog_delete_product_title">Eliminar producto</string>
@@ -62,9 +62,10 @@
     <string name="dialog_edit_product_title">Editar producto</string>
     <string name="toast_manual_transcription_no_products">Debes añadir al menos un producto antes de continuar</string>
     <string name="bill_uncompleted_default_name">Cuenta sin completar</string>
+    <string name="dialog_edit_tax_title">Editar impuestos</string>
     <string name="assignation_intro_title">Asignar productos a personas</string>
     <string name="assignation_intro_description">A continuación se mostrará la lista de productos. Toca sobre un producto para asignarle personas. También puedes seleccionar varios productos a la vez manteniendo pulsado sobre uno</string>
-    <string name="assignation_dialog_positive_button">OK</string>
+    <string name="generic_dialog_positive_button">OK</string>
     <string name="assignation_dialog_neutral_button">Nueva persona</string>
     <string name="dialog_add_person_title">Nueva persona</string>
     <string name="dialog_add_person_positive_button">Añadir</string>
@@ -121,6 +122,8 @@
     <string name="product_name_taxes">Impuestos</string>
     <string name="camera_intro_title">Escanear un ticket</string>
     <string name="camera_intro_description">A continuación se abrirá la cámara. Enfoca al ticket durante unos segundos, sin tocar nada hasta que la aplicación reconozca los productos. Intenta que todos los nombres de los productos y sus precios estén dentro de la imagen. También debe ser visible el precio total.</string>
+    <string name="app_bar_button_tax">Impuestos</string>
+    <string name="content_description_button_tax_clear">Eliminar impuestos</string>
 
     <plurals name="dialog_product_assignation_sub_header">
         <item quantity="one">Asignar este producto a:</item>
