--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -129,6 +129,8 @@
     <string name="cloned_bill_prefix">[Copia]</string>
     <string name="action_activity_final_result_share">Compartir</string>
 
+    <string name="bill_share_breakdown">DESGLOSE</string>
+
     <plurals name="dialog_product_assignation_sub_header">
         <item quantity="one">Asignar este producto a:</item>
         <item quantity="other">Asignar estos productos a:</item>
