Added tip value on the shareable receipt

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -32,6 +32,7 @@
     <string name="bill_summary_subtotal_text">SUBTOTAL:</string>
     <string name="bill_summary_tax_text">IMPUESTOS:</string>
     <string name="bill_summary_total_price_text">PRECIO TOTAL:</string>
+    <string name="bill_summary_tip_value">PROPINA:</string>
     <string name="bill_summary_separator_product_count">-</string>
     <string name="bill_summary_separator_products_title">=</string>
     <string name="bill_summary_separator_total_price">*</string>
@@ -131,6 +132,7 @@
 
     <string name="bill_share_breakdown">DESGLOSE</string>
     <string name="bill_share_tip_line_name">PROPINA</string>
+    <string name="intent_share_title">Compartir a</string>
 
     <plurals name="dialog_product_assignation_sub_header">
         <item quantity="one">Asignar este producto a:</item>
